# python_piscine

00/ex00/: Hello.py
00/ex06/: ft_filter.py
00/ex07/: sos.py
00/ex08/: Loading.py
00/ex09/: pyproject.toml
00_Starting/ex01/: format_ft_time.py
00_Starting/ex02/: find_ft_type.py
00_Starting/ex03/: NULL_not_found.py
00_Starting/ex04/: whatis.py
00_Starting/ex05/: building.py
00_Starting/ex06/: filterstring.py
00_Starting/ex09/: LICENSE  ft_package.py
01/ex00/: give_bmi.py
01/ex01/: array2D.py  tester.py
01/ex02/: tester.py
01/ex03/: zoom.py
01/ex04/: load_image.py
01/ex05/: load_image.py  pimp_image.py  tester.py
01_Array/ex00/: give_bmi.py
01_Array/ex01/: tester.py
01_Array/ex03/: load_image.py  zoom.py
01_Array/ex04/: rotate.py
02/ex01/: aff_life.py
02/ex03/: projection_life.py
02_DataTable/ex02/: aff_pop.py
02_DataTable/ex03/: load_csv.py
03_OOP/ex02/: DiamondTrap.py  S1E7.py
03_OOP/ex03/: ft_calculator.py  tester.py
03_OOP/ex04/: ft_calculator.py  tester.py
04_Data Oriented Design/ex00/: statistics.py
04_Data Oriented Design/ex01/: in_out.py
04_Data Oriented Design/ex02/: callLimit.py
04_Data Oriented Design/ex03/: new_student.py  tester.py
04_OOP/ex00/: S1E9.py  tester.py
